Creado mediante Colaboratory

--- a/Visualizacion_de_datos_Arsenal.ipynb
+++ b/Visualizacion_de_datos_Arsenal.ipynb
@@ -6,7 +6,7 @@
       "name": "Visualizacion_de_datos_Arsenal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNW04YRj8w83NbTGTt0s6jt",
+      "authorship_tag": "ABX9TyPqsXebFcszOOitC63fUE75",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1051,6 +1051,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Podemos observar que el inicio de temporada '2020/21' es el peor inicio de temporada de las últimas 29 temporadas(mitad)\n"
+      ],
+      "metadata": {
+        "id": "1wsOTWtOMl8A"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "points=df[['Season','Points']]"
@@ -1411,6 +1420,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Podemos observar que las dos últimas temporadas son las que menos punto hizo al inicio de temporada"
+      ],
+      "metadata": {
+        "id": "q95hO5isNMNg"
+      }
     },
     {
       "cell_type": "code",
@@ -1855,6 +1873,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# La temporada '2004/05' y '2009/10' fueron un 'éxito' en goles (la última temporada no nos sorprende)."
+      ],
+      "metadata": {
+        "id": "59uqscovNfLQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "goals_against=df[['Season','Goals Against']]"
@@ -2214,6 +2241,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# La temporada '1998/99' una temporada para el olvido para los defensas del Arsenal, y por fin esta vez la última temporada se salvo de ser una temporada para el olvido en todos los frentes."
+      ],
+      "metadata": {
+        "id": "dypCFdEIN_aS"
+      }
     },
     {
       "cell_type": "code",
